# StrikeEngine

./: .gitignore  CMakeLists.txt  imgui.ini  resolve_header_source_mismatch.py  scaffold.py  structure.txt
apps/: CMakeLists.txt
apps/MissionCLI/: CMakeLists.txt
apps/StrikeDesigner/: CMakeLists.txt  main.cpp
apps/StrikeSim/: CMakeLists.txt
cmake/: VulkanSetup.cmake
data/aero/: sa_missile_mk1_aero.json
data/config/: atmosphere_layers.json
data/profiles/: sa_missile_mk1.json  target_drone.json
data/scenarios/: intercept_test_01.json
data/schemas/: seeker_schema.json
data/seekers/: aesa_tracker_v1.json
docs/cem/: 3methods.md  abc.md  diff_solvers.md  doc1unf.md  doc2.md  methods.md  strikecem_detailed_doc.md
include/strikeengine/atmosphere/: AtmosphereManager.hpp  AtmosphereModel.hpp
include/strikeengine/components/guidance/: AntennaComponent.hpp  AutopilotCommandComponent.hpp  AutopilotStateComponent.hpp  CountermeasureDispenserComponent.hpp  FuzeComponent.hpp  GuidanceComponent.hpp  JammerComponent.hpp  SeekerComponent.hpp  WarheadComponent.hpp
include/strikeengine/components/metadata/: InfraredSignatureComponent.hpp  RCSProfileComponent.hpp  TargetComponent.hpp
include/strikeengine/components/physics/: AerodynamicProfileComponent.hpp  ControlSurfaceComponent.hpp  ForceAccumulatorComponent.hpp  IMUComponent.hpp  InertiaComponent.hpp  MassComponent.hpp  PropulsionComponent.hpp  VelocityComponent.hpp  navigationStateComponent.hpp
include/strikeengine/components/sensors/: GPSComponent.hpp  InfraredSeekerComponent.hpp
include/strikeengine/components/transform/: TransformComponent.hpp
include/strikeengine/core/: Engine.hpp  JobSystem.hpp  Profiler.hpp  SystemGraph.hpp
include/strikeengine/designer/: DesignPart.hpp  PartLoader.hpp  VehicleModel.hpp
include/strikeengine/designer/analysis/: MassPropertiesCalculator.hpp
include/strikeengine/designer/parts/: CylinderPart.hpp  NoseConePart.hpp
include/strikeengine/ecs/: Component.hpp  Entity.hpp  Registry.hpp  System.hpp
include/strikeengine/flight/: AerodynamicsDatabase.hpp  IRSignatureDatabase.hpp  RCSDatabase.hpp
include/strikeengine/simulation/: EntityFactory.hpp  ScenarioRunner.hpp
include/strikeengine/systems/guidance/: ControlSystem.hpp  ElectronicWarfareSystem.hpp  EndgameSystem.hpp  GuidanceSystem.hpp  NavigationSystem.hpp  RadarSystem.hpp  SensorSystem.hpp
include/strikeengine/systems/physics/: AerodynamicsSystem.hpp  GravitySystem.hpp  IntegrationSystem.hpp  PropulsionSystem.hpp
include/strikeengine/utils/: JsonGlm.hpp
src/: CMakeLists.txt
src/strikeengine/atmosphere/: AtmosphereManager.cpp  AtmosphereModel.cpp
src/strikeengine/core/: Engine.cpp  JobSystem.cpp  SystemGraph.cpp
src/strikeengine/designer/: PartLoader.cpp
src/strikeengine/designer/analysis/: MassPropertiesCalculator.cpp
src/strikeengine/flight/: AerodynamicsDatabase.cpp  IRSignatureDatabase.cpp  RCSDatabase.cpp
src/strikeengine/simulation/: EntityFactory.cpp  ScenarioRunner.cpp
src/strikeengine/systems/guidance/: ControlSystem.cpp  ElectronicWarfareSystem.cpp  EndgameSystem.cpp  GuidanceSystem.cpp  NavigationSystem.cpp  RadarSystem.cpp  SensorSystem.cpp
src/strikeengine/systems/physics/: AerodynamicsSystem.cpp  GravitySystem.cpp  IntegrationSystem.cpp  PropulsionSystem.cpp
tests/: CMakeLists.txt  atmosphere_test.cpp
tools/: CMakeLists.txt  GenerateAtmosphereTable.cpp
