add_executable(GenerateAtmosphereTable GenerateAtmosphereTable.cpp)
target_link_libraries(GenerateAtmosphereTable PRIVATE strikeengine)
set_target_properties(GenerateAtmosphereTable PROPERTIES FOLDER "Tools")

add_executable(convert_srtm convert_srtm.cpp)
target_link_libraries(convert_srtm PRIVATE strikeengine)
set_target_properties(convert_srtm PROPERTIES FOLDER "Tools")
